# pi2-oscilloscope

./: CMakeLists.txt  README.md  install-deps.sh  load.sh
gui/: main.py
src/: oscilloscope.c
